--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.4.0
 certifi==2024.6.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
@@ -12,18 +13,21 @@ h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
+numpy==2.0.0
 openai==1.35.7
 packaging==24.1
-playsound==1.3.0
+playsound==1.2.2
 PyAudio==0.2.14
+pycparser==2.22
 pydantic==2.7.4
 pydantic_core==2.18.4
 requests==2.32.3
 setuptools==70.1.1
 sniffio==1.3.1
+sounddevice==0.4.7
 SpeechRecognition==3.10.4
 tqdm==4.66.4
 typing_extensions==4.12.2
 urllib3==2.2.2
-Wave==0.0.2
+wavio==0.0.9
 wheel==0.43.0
